force-app/main/default/objects/ArUserStory__c/ArUserStory__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Ar User Story</description>
    <label>Ar User Story</label>
</CustomObject>