force-app/main/default/objects/ArUserStory__c/fields/isTrue__c.field-meta.xml
<CustomField>
    <fullName>isTrue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ar User Story</description>
    <inlineHelpText>Ar User Story</inlineHelpText>
    <label>isTrue</label>
    <type>Checkbox</type>
</CustomField>