force-app/main/default/objects/ArUserStory__c/fields/Story_Name__c.field-meta.xml
<CustomField>
    <fullName>Story_Name__c</fullName>
    <defaultValue>$Label.kcs_dev__aaaabcd</defaultValue>
    <description>Ar User Story</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Ar User Story</inlineHelpText>
    <label>Story Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>