force-app/main/default/objects/ArUserStory__c/fields/Today__c.field-meta.xml
<CustomField>
    <fullName>Today__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <description>Ar User Story</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Ar User Story</inlineHelpText>
    <label>Today</label>
    <required>true</required>
    <type>Date</type>
</CustomField>